--- a/odoo/odoo/addons/base/views/res_users_views.xml
+++ b/odoo/odoo/addons/base/views/res_users_views.xml
@@ -11,8 +11,8 @@
                         <field name="confirm_password" password="True" required="1"/>
                     </group>
                     <footer>
-                        <button string="Change Password" name="change_password" type="object" class="btn-primary" data-hotkey="q"/>
-                        <button string="Cancel" class="btn-secondary" special="cancel" data-hotkey="x" />
+                        <button string="Change Password button" name="change_password" type="object" class="btn-primary" data-hotkey="q"/>
+                        <button string="Cancel button" class="btn-secondary" special="cancel" data-hotkey="x" />
                     </footer>
                 </form>
             </field>
